<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/space_3"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPaymentdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5e5e5"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:text="@string/tv_conf_order_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout2"
            android:layout_below="@+id/txtPaymentdetails">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/card_viewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="@dimen/space_3"
                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/gray"
                                android:padding="@dimen/space_4"
                                android:text="@string/tv_del_date_time"
                                android:textSize="@dimen/space_18" />

                            <TextView
                                android:id="@+id/textTimeSlot"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/space_5"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/card_viewb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="@dimen/space_3"
                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/gray"
                                android:padding="@dimen/space_4"
                                android:text="@string/tv_del_address"
                                android:textSize="@dimen/space_18" />

                            <TextView
                                android:id="@+id/txtAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/space_5"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:id="@+id/card_viewf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="@dimen/space_3"
                        app:cardUseCompatPadding="true"
                        card_view:cardCornerRadius="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/gray"
                                android:padding="@dimen/space_4"
                                android:text="@string/tv_total_item_amount"
                                android:textSize="@dimen/space_18" />

                            <TextView
                                android:id="@+id/txtTotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/space_5"
                                android:textStyle="bold" />



                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/xml_button"
                android:text="@string/order_now"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>